# linux_playground

./: .gitignore  _tmp_inspect.py  diag_ipv6.py  pyproject.toml
linux_playground/esp32_embedded/: CMakeLists.txt  diagram.json  wokwi.json
linux_playground/esp32_embedded/src/: main.c
linux_playground/esp_embedded/checking/: CMakeLists.txt
linux_playground/evdev_playground/: simulate_capslock.py  simulate_joystick.py  simulate_keyboard_to_joystick.py
linux_playground/linux_kernel/hello/: .Module.symvers.cmd  .hello.ko.cmd  .hello.mod.cmd  .hello.mod.o.cmd  .hello.o.cmd  .modules.order.cmd  hello.c  hello.ko  hello.mod.c  modules.order
linux_playground/python_playground/concurency_training/: multi_threaded_time_comparison.py
linux_playground/python_playground/files_generator/: files_generator.py
linux_playground/python_playground/math_training/: main_usage.py  pandas_df_training.py  pandas_training.ipynb  plot_view.py  simple_linear_eq.py  wp_creator.py
linux_playground/python_playground/python_ai_intergration/: ai_testing.py  analyze_test_report.py  test_ollama.py
linux_playground/python_playground/python_web_hackery/: bhp_web_section.py  bhp_wordpress_mapper_web_section.py  c_program_fast  c_program_fast.c  docker-compose.yml  flask_cookie_demo_client.py  flask_cookie_demo_server.py  web_requests_training.py  wordpress-found-paths.txt
linux_playground/python_playground/sniffers/: packet_sniffing_windows_linux.py
linux_playground/python_playground/telegram_bot/: inspire_bot.py
linux_playground/utils/: constants.py
linux_playground/utils/dir_utils/: config_utils.py
(+33 files in other folders)
