[tool.poetry]
name = "linux-playground"
version = "0.1.0"
description = "Linux input simulation tools"
authors = ["Eden Refael edenraf@hotmail.com"]
readme = "README.md"
packages = [{include = "linux_playground"}]

[tool.poetry.dependencies]
python = "^3.9"
evdev = { version = "^1.6.1", markers = "sys_platform == 'linux'" }
python-dotenv = "^1.1.1"
requests = "^2.32.5"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
