[tool.poetry]
name = "linux-playground"
version = "0.1.0"
description = "Linux input simulation tools"
authors = ["Eden Refael edenraf@hotmail.com"]
readme = "README.md"
packages = [{include = "linux_playground"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
evdev = { version = "^1.6.1", markers = "sys_platform == 'linux'" }
python-dotenv = "^1.1.1"
requests = "^2.32.5"
pyyaml = "^6.0.2"
scapy = "^2.6.1"
numpy = ">=2,<2.3"
plotly = "^6.3.1"
pandas = "^2.3.3"
opencv-python = "^4.12.0.88"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
